✏️ [Style] 로그인 성공 페이지 영문화 작업
로그인 성공 페이지 내 한글 영문화 진행

--- a/src/views/connect.pug
+++ b/src/views/connect.pug
@@ -6,14 +6,14 @@ html(lang="ko")
   body
     header(class="header")
       img(src="/images/logo.png", alt="logo-image" class="logo-image")
-      span(calss="header-description")
-        | 피그마 버전을 비교해
+      span(class="header-description")
+        | Compare Figma versions
         br
-        | 디자인 변경사항을 한눈에!
+        | to spot design changes at a glance!
     main(class="main")
       img(src="/images/connect.png", alt="connect-image" class="connect-image")
-      h1(class="title") Figci를 바로 사용할 수 있어요!
+      h1(class="title") Start using Figci right away!
       span(class="main-description")
-        | Figci는 피그마 디자인 파일 링크와 파일의 이전/최신 버전을
+        | Figci lets you see changes in the same design file
         br
-        | 선택해주시면 같은 디자인 파일의 변경사항을 바로 볼 수 있어요!
+        | by selecting the Figma design file link and its previous/latest version.
